Prevent flexbox from stretching placeholder buttons vertically.

--- a/packages/components/src/placeholder/style.scss
+++ b/packages/components/src/placeholder/style.scss
@@ -43,6 +43,7 @@
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
+	align-items: flex-start;
 	width: 100%;
 	max-width: 400px;
 	flex-wrap: wrap;
